fix:add letter-spacing for nav-elements

--- a/style_css/header_style.css
+++ b/style_css/header_style.css
@@ -9,6 +9,7 @@
   padding: 0 20px;
   color: whitesmoke;
   text-decoration: none;
+  letter-spacing: 1.5px;
   line-height: 50px;
   transition: 2s;
 }
